* Add --set-option command line switch.

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,9 @@ ikiwiki (2.6) UNRELEASED; urgency=low
   * Fix problems with previewing in the graphviz plugin. Thanks,
     HenrikBrixAndersen.
   * Allow raw html in the rst plugin.
+  * Add --set-option command line switch.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 29 Jul 2007 18:38:36 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 03 Aug 2007 20:33:43 -0700
 
 ikiwiki (2.5) unstable; urgency=low
 
