--- a/doc/todo/parse_debian_packages.mdwn
+++ b/doc/todo/parse_debian_packages.mdwn
@@ -8,6 +8,8 @@ a helpful index page to a small repository, listing all the
 packages, and possibly their descriptions as well, with links to
 download them or their sources.
 
+--Cameron
+
 > It's a good idea, I think there are probably several ways to approach it
 > that would all yeild good, though differing results. Maybe with
 > something like this I'd actually get around to posting ikiwiki debs to
@@ -55,6 +57,7 @@ automatically.
 >> a separate package from ikiwiki. Is it possible to package
 >> plugins separately? --Cameron
 
---Cameron
+>>> Sure, a plugin is just a perl library so can easily be packaged
+>>> separately.
 
 [[tag wishlist]]
