web commit by NicolasLimare: tagged

--- a/doc/todo/rel_attribute_for_links.mdwn
+++ b/doc/todo/rel_attribute_for_links.mdwn
@@ -46,3 +46,5 @@ This one uses it for tags:
 This can also help for css decoraton. An example of these patches in use: http://poivron.org/~nil/iki/japonesie/horizon_large/
 
 — NicolasLimare
+
+[[tag wishlist patch]]
