--- a/doc/todo/CSS_classes_for_links.mdwn
+++ b/doc/todo/CSS_classes_for_links.mdwn
@@ -43,6 +43,14 @@ My best regards,
 >>
 >> Thanks for the hint! I don't know CSS3 yet :) What modern and popular
 >> WWW browsers do support it now?
+>>
+>>> Safari supports it. Firefoz&Co support most of it. IE6 did not, but IE7
+>>> supports a fair part of CSS3, ans is said to support selectors.
+>>>
+>>> Example on how to use selectors here: http://www.kryogenix.org/days/2002/08/30/external
+>>>
+>>> I also think this should be in an external plugin, not in ikiwiki.
+>>>
 
 > If you need to achieve this in IkiWiki itself, I imagine you could create a
 > plugin which runs in the `format` phase of rendering and search/replaces
