* pagetemplate: don't display template name

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ ikiwiki (2.6) UNRELEASED; urgency=low
     HenrikBrixAndersen.
   * Allow raw html in the rst plugin.
   * Add --set-option command line switch.
+  * pagetemplate: don't display template name
 
  -- Joey Hess <joeyh@debian.org>  Fri, 03 Aug 2007 20:33:43 -0700
 
