* Add rel=tag attribute to tag links, supporting that microformat, as well   as allowing them to be styled specially. Thanks, NicolasLimare.

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,10 @@ ikiwiki (2.6) UNRELEASED; urgency=low
   * Allow raw html in the rst plugin.
   * Add --set-option command line switch.
   * pagetemplate: don't display template name
+  * Add rel=tag attribute to tag links, supporting that microformat, as well
+    as allowing them to be styled specially. Thanks, NicolasLimare.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 03 Aug 2007 20:33:43 -0700
+ -- Joey Hess <joeyh@debian.org>  Sun, 05 Aug 2007 13:35:37 -0700
 
 ikiwiki (2.5) unstable; urgency=low
 
