--- a/doc/plugins/write.mdwn
+++ b/doc/plugins/write.mdwn
@@ -372,6 +372,7 @@ control some options. These are:
 * forcesubpage  - set to force a link to a subpage
 * linktext - set to force the link text to something
 * anchor - set to make the link include an anchor
+* rel - set to add a rel attribute to the link.
 
 #### `readfile($;$)`
 
