--- a/doc/todo/CSS_classes_for_links.mdwn
+++ b/doc/todo/CSS_classes_for_links.mdwn
@@ -68,4 +68,8 @@ My best regards,
 > Reason is that there are many ways for external links to get into an
 > ikiwiki page, including being entered as raw html. The only time ikiwiki
 > controls a link is when an internal link is added using a WikiLink.
+>
+> (Note that tags get their own special
+> [[rel_attribute|rel_attribute_for_link]] now that CSS can use.)
+> 
 > --[[Joey]]
