web commit by NicolasLimare: typo

--- a/doc/todo/rel_attribute_for_links.mdwn
+++ b/doc/todo/rel_attribute_for_links.mdwn
@@ -3,7 +3,7 @@ A rel="" attribute is desirable for links, for example to
 * limit the interest of comment spam with rel="nofollow" for anonymous wiki contributions (see [Google](http://googleblog.blogspot.com/2005/01/preventing-comment-spam.html))
 * identify page tags with rel="tag" (see [microformats](http://microformats.org/wiki/rel-tag))
 * define a social network with rel="friend co-worker met ..." for contacts (see [XFN](http://www.gmpg.org/xfn/))
-* define a license with rel="license" for contacts (see [microformats](http://microformats.org/wiki/rel-license))
+* define a license with rel="license" (see [microformats](http://microformats.org/wiki/rel-license))
 
 This patch adds this possibility to htmllink().
 
