--- a/doc/todo/rel_attribute_for_links.mdwn
+++ b/doc/todo/rel_attribute_for_links.mdwn
@@ -16,4 +16,4 @@ This can also help for css decoraton. An example of these patches in use: http:/
 
 — NicolasLimare
 
-[[tag wishlist patch]]
+[[tag wishlist]]
