--- a/doc/about_rcs_backends.mdwn
+++ b/doc/about_rcs_backends.mdwn
@@ -178,6 +178,10 @@ please refer to [Emanuele](http://nerd.ocracy.org/em/)
 
 ## [[tla]]
 
+## rcs
+
+There is a patch that needs a bit of work linked to from [[todo/rcs]].
+
 ## [Monotone](http://monotone.ca/)
 
 There is an unfinished patch in [[bugs/Monotone_rcs_support]].
