link to rel=nofollow todo

--- a/doc/todo/rel_attribute_for_links.mdwn
+++ b/doc/todo/rel_attribute_for_links.mdwn
@@ -9,8 +9,8 @@ This patch adds this possibility to htmllink().
 
 This one uses it for tags:
 
-> Both applied, thanks. Leaving the bug open since rel=nofollow etc are
-> still requested here. --[[Joey]]
+> Both applied, thanks. Leaving the bug open since other parts are not
+> implemented yet. See also [[rel=nofollow_on_external_links]] --[[Joey]]
 
 This can also help for css decoraton. An example of these patches in use: http://poivron.org/~nil/iki/japonesie/horizon_large/
 
