--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,9 @@ ikiwiki (2.6) UNRELEASED; urgency=low
   * pagetemplate: don't display template name
   * Add rel=tag attribute to tag links, supporting that microformat, as well
     as allowing them to be styled specially. Thanks, NicolasLimare.
+  * Add sessioncgi hook. 
 
- -- Joey Hess <joeyh@debian.org>  Sun, 05 Aug 2007 13:35:37 -0700
+ -- Joey Hess <joeyh@debian.org>  Sun, 05 Aug 2007 14:36:55 -0700
 
 ikiwiki (2.5) unstable; urgency=low
 
