--- a/doc/plugins/meta.mdwn
+++ b/doc/plugins/meta.mdwn
@@ -47,6 +47,10 @@ You can use any field names you like, but here are some predefined ones:
 
   Specifies the author of a page.
 
+* authorurl
+
+  Specifies an url for the author of a page.
+
 * permalink
 
   Specifies a permanent link to the page, if different than the page
