--- a/doc/todo/language_definition_for_the_meta_plugin.mdwn
+++ b/doc/todo/language_definition_for_the_meta_plugin.mdwn
@@ -14,6 +14,9 @@ templates and inclusion.
 
 This may be useful for sites with a few pages in different languages, but no full i18n.
 
+> Looks good, but the need to modify the template and include a default
+> language in it is a bit problimatic, I think. --[[Joey]]
+
 <pre>
 --- meta.orig.pm  2007-07-27 00:19:51.000000000 +0200
 +++ meta.pm       2007-08-05 22:37:40.000000000 +0200
