--- a/doc/setup/discussion.mdwn
+++ b/doc/setup/discussion.mdwn
@@ -9,6 +9,7 @@ they import. --Ethan
 > I've switched to a different method that preserves .ikiwiki, w/o checking
 > it in. --[[Joey]]
 
+
 These instructions should probably show how to use a bare Git repository
 (`GIT_DIR=somewhere.git git-init-db`) rather than a repository with a full
 working copy. You can always clone the repository if you want your own local
@@ -16,9 +17,14 @@ working copy. Furthermore, this allows you to make multiple commits to your
 working copy before pushing them to the repository and causing the wiki to
 update. --[[JoshTriplett]]
 
+> I'm currently testing and running such a setup. --[[tschwinge]]
+
 Furthermore the git instructions should be changed to move the *.ikiwiki*
 directory back into the wiki's working copy directory, isn't it? --[[tschwinge]]
-Yes, I think so.  I will clean these instructions up unless somebody tells me we're missing something fundamental. --[[BartMassey]]
+
+> Yes, I think so.  I will clean these instructions up unless somebody tells me we're missing something fundamental. --[[BartMassey]]
+
+>> Either you do it or I'll do it somewhen soon.  --[[tschwinge]]
 
 Curious as to why support for CVS is not built in. --[[Luther]]
 
