web commit by test

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -89,4 +89,4 @@ Bulleted list
 
 This sandbox is also a [[blog]]!
 
-[[inline pages="sandbox/*" rootpage="sandbox" show="7"]]
+[[inline pages="sandbox/*" rootpage="sandbox" show="4" archive="yes"]]
