web commit by http://andrewjswest.myopenid.com/

--- a/doc/todo/httpauth_example/discussion.mdwn
+++ b/doc/todo/httpauth_example/discussion.mdwn
@@ -1,1 +1,1 @@
-I wrote my experiences dealing with authentication [here](http://wiki.swclan.homelinux.org/tech/). Does it fit the bill? Its not really authentication (though its mentioned in my process) so much as just an attempt to eliminate the clear text password problem.
+I wrote my experiences dealing with authentication [here](http://wiki.swclan.homelinux.org/tech/). Does it fit the bill? Its not really authentication (though its mentioned in my process) so much as just an attempt to eliminate the clear text password problem. --[Andrew Sackville-West](mailto:andrew@swclan.homelinux.org)
