web commit by http://jeremie.koenig.myopenid.com/

--- a/doc/todo/multiple_output_formats.mdwn
+++ b/doc/todo/multiple_output_formats.mdwn
@@ -2,3 +2,5 @@ Ikiwiki could support building some pages into additionnal output formats,
 such as postscript or plain text, and provide links to those on the html output.
 
 This would provide true "printable versions" of the wiki pages supporting it.
+
+--[[JeremieKoenig]]
