web commit by http://jeremie.koenig.myopenid.com/: whoops

--- a/doc/todo/jeremiekoenig.mdwn
+++ b/doc/todo/jeremiekoenig.mdwn
@@ -1,2 +1,2 @@
-I'm planning to push for ikiwiki as a supplement/replacement for SPIP at some site.
-I will especially need good review and translations support in order to succeed.
+Whoops I miscreated this page into the todo section.
+Can someone with svn access remove it please ?
