web commit by tschwinge: --usedirs is used by default.

--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -271,7 +271,7 @@ configuration options of their own.
 
 * --usedirs, --no-usedirs
 
-  Create output files named page/index.html instead of page.html.
+  Toggle creating output files named page/index.html (default) instead of page.html.
 
 * --w3mmode, --no-w3mmode
 
