--- a/doc/todo/support_for_SDF_documents.mdwn
+++ b/doc/todo/support_for_SDF_documents.mdwn
@@ -1,3 +1,6 @@
 I think it would be useful for ikiwiki to support [[debpkg sdf]] input,
 which can be converted and rendered to many formats.
+I should add, however, that SDF allows executing arbitrary perl code
+from its documents; which means some sanitization would need to occur
+before the document is fed to sdf.
 --[[JeremieKoenig]]
