web commit by atest: Test

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -91,3 +91,5 @@ Bulleted list
 This sandbox is also a [[blog]]!
 
 [[inline pages="sandbox/*" rootpage="sandbox" show="4" archive="yes"]]
+
+Well, this is a test!
