web commit by atest: Hi, test!

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -86,10 +86,10 @@ Bulleted list
 * [Email](mailto:noone@invalid)
 * WikiLink without any markup.
 
+And here is an edit to test page subscription.
+
 -----
 
 This sandbox is also a [[blog]]!
 
 [[inline pages="sandbox/*" rootpage="sandbox" show="4" archive="yes"]]
-
-Well, this is a test!
