--- a/doc/todo/multiple_templates.mdwn
+++ b/doc/todo/multiple_templates.mdwn
@@ -9,3 +9,5 @@ Hmm, I think the pagetemplate hook should allow one to get close enough to
 this in a plugin now.
 
 See also: [[Allow_per-page_template_selection]] -- same thing, really.
+
+[[done]]
