* Add sessioncgi hook. * Updated Spanish translation from Victor Moral.

--- a/po/es.po
+++ b/po/es.po
@@ -170,9 +170,8 @@ msgid "failed to resize: %s"
 msgstr "redimensionado fallido: %s"
 
 #: ../IkiWiki/Plugin/img.pm:96
-#, fuzzy, perl-format
 msgid "failed to determine size of image %s"
-msgstr "redimensionado fallido: %s"
+msgstr "no he podido determinar el tamaño de la imagen %s"
 
 #: ../IkiWiki/Plugin/inline.pm:36
 msgid "Must specify url to wiki with --url when using --rss or --atom"
@@ -248,7 +247,7 @@ msgstr "Todas las páginas están referenciadas entre sí."
 
 #: ../IkiWiki/Plugin/pagetemplate.pm:21
 msgid "bad or missing template"
-msgstr ""
+msgstr "plantilla errónea ó no existente"
 
 #: ../IkiWiki/Plugin/passwordauth.pm:162
 msgid "Account creation successful. Now you can Login."
@@ -579,7 +578,7 @@ msgstr "uso: ikiwiki [opciones] origen destino"
 
 #: ../ikiwiki.in:81
 msgid "usage: --set var=value"
-msgstr ""
+msgstr "uso: --set variable=valor"
 
 #: ../IkiWiki.pm:124
 msgid "Must specify url to wiki with --url when using --cgi"
