--- a/debian/changelog
+++ b/debian/changelog
@@ -9,10 +9,11 @@ ikiwiki (2.6) UNRELEASED; urgency=low
   * pagetemplate: don't display template name
   * Add rel=tag attribute to tag links, supporting that microformat, as well
     as allowing them to be styled specially. Thanks, NicolasLimare.
-  * Add sessioncgi hook. 
+  * Add sessioncgi hook.
   * Move blog form code out of CGI.pm and into the inline plugin.
+  * Updated Spanish translation from Victor Moral.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 05 Aug 2007 14:36:55 -0700
+ -- Joey Hess <joeyh@debian.org>  Fri, 10 Aug 2007 11:04:37 -0700
 
 ikiwiki (2.5) unstable; urgency=low
 
