* Updated French translation from Cyril Brulebois. Closes: #437181

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,8 +12,9 @@ ikiwiki (2.6) UNRELEASED; urgency=low
   * Add sessioncgi hook.
   * Move blog form code out of CGI.pm and into the inline plugin.
   * Updated Spanish translation from Victor Moral.
+  * Updated French translation from Cyril Brulebois. Closes: #437181
 
- -- Joey Hess <joeyh@debian.org>  Fri, 10 Aug 2007 11:04:37 -0700
+ -- Joey Hess <joeyh@debian.org>  Sat, 11 Aug 2007 17:24:46 -0400
 
 ikiwiki (2.5) unstable; urgency=low
 
