--- a/doc/patch.mdwn
+++ b/doc/patch.mdwn
@@ -5,5 +5,5 @@ commit access to the tree, here's a queue of suggested patches.
 If you post a patch to the [[todo]] or [[bugs]] list, or elsewhere,
 once it's ready to be applied, add a 'patch' tag so it will show up here.
 
-[[inline pages="todo/* and link(patch) and !*/Discussion" rootpage="todo"
+[[inline pages="(todo/* or bugs/*) and link(patch) and !*/Discussion" rootpage="todo"
 archive="yes"]]
