--- a/doc/todo/blogpost_plugin.mdwn
+++ b/doc/todo/blogpost_plugin.mdwn
@@ -152,3 +152,5 @@ Index: IkiWiki.pm
  our $VERSION = 2.00; # plugin interface version, next is ikiwiki version
  our $version='unknown'; # VERSION_AUTOREPLACE done by Makefile, DNE
 </pre>
+
+[[tag patch]]
