--- a/doc/todo/multiple_output_formats.mdwn
+++ b/doc/todo/multiple_output_formats.mdwn
@@ -4,3 +4,5 @@ such as postscript or plain text, and provide links to those on the html output.
 This would provide true "printable versions" of the wiki pages supporting it.
 
 --[[JeremieKoenig]]
+
+[[tag wishlist]]
