--- a/doc/todo/review_mechanism.mdwn
+++ b/doc/todo/review_mechanism.mdwn
@@ -31,3 +31,5 @@ Change queues would be wiki pages as well (probably using [[inlines|plugins/inli
 > web interface, though.
 >
 > -- [[JoshTriplett]]
+
+[[tag wishlist]]
