--- a/doc/todo/support_for_SDF_documents.mdwn
+++ b/doc/todo/support_for_SDF_documents.mdwn
@@ -4,3 +4,5 @@ I should add, however, that SDF allows executing arbitrary perl code
 from its documents; which means some sanitization would need to occur
 before the document is fed to sdf.
 --[[JeremieKoenig]]
+
+[[tag wishlist]]
