--- a/doc/todo/pagespec_relative_to_a_target.mdwn
+++ b/doc/todo/pagespec_relative_to_a_target.mdwn
@@ -88,6 +88,8 @@ diff -urNX ignorepats ikiwiki/IkiWiki/Plugin/relative.pm ikidev/IkiWiki/Plugin/r
 +1
 </pre>
 
+[[tag patch]]
+
 > This looks really interesting.  It reminds me of XPath and its conditionals.
 > Those might actually work well adapted to pagespecs.  For instance, to write
 > "match any page with a child blah", you could just write *[blah] , or if you
