* Apply a patch from NicolasLimare adding modification date tags to rss and   atom feeds, and also changing the publication time for a feed to the   newest modiciation time (was newest creation time). * The patch also adds dcterms:creator to rss items that have a known author.

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,8 +15,12 @@ ikiwiki (2.6) UNRELEASED; urgency=low
   * Updated French translation from Cyril Brulebois. Closes: #437181
   * The toc directive doesn't work well or make sense inside an inlined page.
     Disable it when the page with the toc is nested inside another page.
+  * Apply a patch from NicolasLimare adding modification date tags to rss and
+    atom feeds, and also changing the publication time for a feed to the
+    newest modiciation time (was newest creation time).
+  * The patch also adds dcterms:creator to rss items that have a known author.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 11 Aug 2007 17:40:45 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 11 Aug 2007 18:25:28 -0400
 
 ikiwiki (2.5) unstable; urgency=low
 
