--- a/debian/changelog
+++ b/debian/changelog
@@ -19,8 +19,10 @@ ikiwiki (2.6) UNRELEASED; urgency=low
     atom feeds, and also changing the publication time for a feed to the
     newest modiciation time (was newest creation time).
   * The patch also adds dcterms:creator to rss items that have a known author.
+  * Support pagespec "functions" with no parameters, like included() in the
+    conditional plugin.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 11 Aug 2007 18:25:28 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 11 Aug 2007 19:26:14 -0400
 
 ikiwiki (2.5) unstable; urgency=low
 
